@@ -24,7 +24,7 @@ duplicated.matrix <- duplicated.array <-
 	.NotYetUsed("incomparables != FALSE")
     ndim <- length(dim(x))
     if (length(MARGIN) > ndim || any(MARGIN > ndim))
-        stop(paste("MARGIN = ", MARGIN," is invalid for dim = ",
+        stop(paste("MARGIN = ", MARGIN, " is invalid for dim = ",
                    dim(x), sep = ""))
     temp <- apply(x, MARGIN, function(x) paste(x, collapse = "\r"))
     res <- duplicated(as.vector(temp))
@@ -38,6 +38,8 @@ unique <- function(x, incomparables = FALSE, ...)
     UseMethod("unique", x, incomparables, ...)
 }
 
+## NB unique.default is used by factor to avoid unique.matrix,
+## so it needs to handle some other cases.
 unique.default <- function(x, incomparables = FALSE, ...)
 {
     if(!is.logical(incomparables) || incomparables)
@@ -45,7 +47,8 @@ unique.default <- function(x, incomparables = FALSE, ...)
     z <- .Internal(unique(x))
     if(is.factor(x))
 	factor(z, levels = 1:nlevels(x), labels = levels(x),
-               ordered =is.ordered(x))
+               ordered = is.ordered(x))
+    else if(inherits(x, "POSIXct")) structure(z, class=class(x))
     else z
 }
 
@@ -63,7 +66,7 @@ unique.matrix <- unique.array <-
 	.NotYetUsed("incomparables != FALSE")
     ndim <- length(dim(x))
     if (length(MARGIN) > 1 || any(MARGIN > ndim))
-        stop(paste("MARGIN = ", MARGIN," is invalid for dim = ",
+        stop(paste("MARGIN = ", MARGIN, " is invalid for dim = ",
                    dim(x), sep = ""))
     temp <- apply(x, MARGIN, function(x) paste(x, collapse = "\r"))
     args <- rep(alist(a=), ndim)
